--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 # pip install -r requirements.txt
 
 # Base ----------------------------------------
-matplotlib>=3.2.2
-numpy>=1.18.5
-opencv-python>=4.1.2
-Pillow>=7.1.2
-PyYAML>=5.3.1
+matplotlib==3.5.1
+numpy==1.21.5
+opencv-python==4.5.4.60
+Pillow==8.4.0
+PyYAML==6.0
 requests>=2.23.0
 scipy>=1.4.1
 torch==1.9.0
@@ -13,12 +13,12 @@ torchvision==0.10.0
 tqdm>=4.41.0
 
 # Logging -------------------------------------
-tensorboard>=2.4.1
+tensorboard==2.7.0
 # wandb
 
 # Plotting ------------------------------------
-pandas>=1.1.4
-seaborn>=0.11.0
+pandas==1.3.5
+seaborn==0.11.2
 
 # Export --------------------------------------
 # coremltools>=4.1  # CoreML export
